test: service integration test